# mcp2cli-rs

./: Cargo.toml  README.md  USAGE.md
src/: main.rs
src/application/: dto.rs  mod.rs  ports.rs  use_cases.rs
src/domain/: entities.rs  errors.rs  mod.rs  repositories.rs  services.rs  value_objects.rs
src/infrastructure/: config.rs  mcp_client.rs  mod.rs  oauth.rs  output.rs  param_parser.rs  transport.rs
src/presentation/: cli.rs  commands.rs  interactive.rs  mod.rs
