[package]
name = "rmcp"
version = "0.4.0"
edition = "2024"
authors = ["weibaohui"]
description = "A CLI-native MCP client that loads tool schemas on-demand"
license = "MIT"
repository = "https://github.com/weibaohui/rmcp"
keywords = ["mcp", "cli", "ai", "tools"]
categories = ["command-line-utilities"]
rust-version = "1.85"

[[bin]]
name = "rmcp"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.44", features = ["full"] }
tokio-util = "0.7"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
eventsource-client = "0.15"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Terminal
colored = "3.0"
comfy-table = "7.1"

# Interactive REPL
reedline = "0.38"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Regex
regex = "1.11"

# URL parsing
url = "2.5"

# UUIDuuid = { version = "1.16", features = ["v4", "serde"] }

# Base64
base64 = "0.22"

# Crypto for OAuth
sha2 = "0.10"
rand = "0.9"

# HTTP server for OAuth callback
axum = "0.8"
tower = "0.5"

# Async trait
async-trait = "0.1"

# Streaming
futures = "0.3"
futures-util = "0.3"
bytes = "1.10"

# Home directory
home = "0.5"

# Unix-specific
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "fs"] }

# IndexMap for ordered collections
indexmap = { version = "2.8", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
tempfile = "3.19"
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
